# boltzina

./: INPUT_FORMAT.md  LICENSE  README.md  boltzina_main.py  boltzina_main_v2.py  example_usage.py  ligand_preparation.py  pyproject.toml  run.py  run.sh  setup.py  setup.sh  setup_boltzina.py  test_boltzina.py
boltzina/: __init__.py
boltzina/affinity/: inferencev2.py  mmcif.py  predict_affinity.py  process_structure.py
boltzina/data/model/models/: boltz2.py
boltzina/data/module/: inferencev2.py
boltzina/data/parse/: mmcif.py
boltzina/data/write/: writer.py
boltzina/docking/: calculate_com.py  get_centerofmass.py
boltzina/model/models/: boltz2.py
preparation_sample/: config.json  input_smiles.txt
sample/CDK2/: 1ckp_cdk2.yaml  config.json  config_scoring.json  input.txt  mols_pose.pkl
sample/CDK2/boltz_results_base/msa/1ckp_cdk2_unpaired_tmp_env/: bfd.mgnify30.metaeuk30.smag30.a3m  pdb70.m8  uniref.a3m
sample/CDK2/boltz_results_base/predictions/1ckp_cdk2/: 1ckp_cdk2_model_0.cif  affinity_1ckp_cdk2.json  confidence_1ckp_cdk2_model_0.json  pae_1ckp_cdk2_model_0.npz  pde_1ckp_cdk2_model_0.npz  plddt_1ckp_cdk2_model_0.npz  pre_affinity_1ckp_cdk2.npz
sample/CDK2/boltz_results_base/processed/: manifest.json
sample/CDK2/boltz_results_base/processed/constraints/: 1ckp_cdk2.npz
sample/CDK2/boltz_results_base/processed/mols/: 1ckp_cdk2.pkl
sample/CDK2/boltz_results_base/processed/msa/: 1ckp_cdk2_0.npz
sample/CDK2/boltz_results_base/processed/records/: 1ckp_cdk2.json
sample/CDK2/boltz_results_base/processed/structures/: 1ckp_cdk2.npz
